# rx-ray

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  railway.json
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/frontend/: next.config.ts  package-lock.json  package.json
conf/base/: parameters.yml  prompts.yml
conf/local/: logging.yml
docs/: EVALUATION.md  ROADMAP.md
evals/: LABELING_GUIDE.md  questions.yml
evals/critic_labels/: sheet_2026-07-02.key.yml  sheet_2026-07-02.yml  sheet_2026-07-04.key.yml  sheet_2026-07-04.scoring.json  sheet_2026-07-04.scoring.md  sheet_2026-07-04.yml
evals/results/: latest.json  latest.md  latest_combined_extraction_only.json  latest_combined_extraction_only.md  latest_symbolic.json  latest_symbolic.md
notebooks/: 01_data_exploration.ipynb  01a_explore_rxnorm_kg.ipynb  02_build_graph.ipynb  03_backend_query_answer_walkthrough.ipynb  04_interaction_evidence_map_debug.ipynb  05_guardrails_v2_v3_walkthrough.ipynb
scripts/: build_compare_fixtures.py  build_dossier.py  export_critic_sample.py  railway_start.sh  run_eval.py  score_critic_labels.py  test_data_connections.py
src/: __init__.py  utils.py
src/dossier/: __init__.py  builder.py  label_fallback.py  models.py  openfda_store.py  rxnorm_store.py
src/evals/: __init__.py  compare.py  critic_study.py  metrics.py  models.py  neural.py  report.py  runner.py
src/query_answer/: __init__.py  (+13 more)
tests/: conftest.py  test_api.py  test_compare.py  test_critic.py  test_critic_study.py  test_dossier.py  test_eval_metrics.py
(+52 files in other folders)
